# barista

./: .bazelrc  BUILD.bazel  angular.json  nx.json  package-lock.json  package.json  postinstall.js  tsconfig.json  view-engine-tsconfig.json
.circleci/: config.yml
apps/barista-design-system/: BUILD.bazel
apps/components-e2e/: BUILD.bazel  rollup.config.js
apps/components-e2e/src/: BUILD.bazel  index.html  index.prod.html  main.dev.ts  main.prod.ts  main.scss  main.ts
apps/components-e2e/src/app/: BUILD.bazel  app.module.ts  app.routing.module.ts
apps/components-e2e/src/components/button/: BUILD.bazel
apps/components-e2e/src/components/button-group/: BUILD.bazel
apps/components-e2e/src/components/icon/: BUILD.bazel  icon.e2e.ts  icon.html  icon.module.ts  icon.ts
apps/demos/src/: examples.module.ts
apps/design-tokens-ui/: BUILD.bazel
apps/design-tokens-ui/src/app/: BUILD.bazel  app.component.scss
apps/design-tokens-ui/src/styles/: BUILD.bazel
environments/: BUILD.bazel
libs/barista-components/: config.bzl
libs/examples/: BUILD.bazel
libs/examples/src/: index.ts
libs/examples/src/alert/: alert-examples.module.ts
libs/examples/src/autocomplete/: autocomplete-examples.module.ts
libs/examples/src/bar-indicator/: bar-indicator-examples.module.ts
libs/examples/src/breadcrumbs/: breadcrumbs-examples.module.ts
libs/examples/src/button/: button-examples.module.ts
libs/examples/src/button-group/: button-group-examples.module.ts
libs/examples/src/card/: card-examples.module.ts
libs/examples/src/chart/: chart-examples.module.ts
libs/examples/src/checkbox/: checkbox-examples.module.ts
libs/examples/src/combobox/: combobox-examples.module.ts
libs/examples/src/confirmation-dialog/: confirmation-dialog-examples.module.ts
libs/examples/src/consumption/: consumption-examples.module.ts
libs/examples/src/container-breakpoint-observer/: container-breakpoint-observer-examples.module.ts
libs/examples/src/context-dialog/: context-dialog-examples.module.ts
libs/examples/src/copy-to-clipboard/: copy-to-clipboard-examples.module.ts
libs/examples/src/drawer/: drawer-examples.module.ts
libs/examples/src/drawer-table/: drawer-table-examples.module.ts
libs/examples/src/empty-state/: empty-state-examples.module.ts
libs/examples/src/event-chart/: event-chart-examples.module.ts
libs/examples/src/expandable-panel/: expandable-panel-examples.module.ts
libs/examples/src/expandable-section/: expandable-section-examples.module.ts
libs/examples/src/expandable-text/: expandable-text-examples.module.ts
libs/examples/src/filter-field/: filter-field-examples.module.ts
libs/examples/src/form-field/: form-field-examples.module.ts
libs/examples/src/formatters/: formatters-examples.module.ts
libs/examples/src/highlight/: highlight-examples.module.ts
libs/examples/src/icon/: icon-examples.module.ts
libs/examples/src/indicator/: indicator-examples.module.ts
libs/examples/src/info-group/: info-group-examples.module.ts
libs/examples/src/inline-editor/: inline-editor-examples.module.ts
libs/examples/src/input/: input-examples.module.ts
libs/examples/src/key-value-list/: key-value-list-examples.module.ts
libs/examples/src/legend/: legend-examples.module.ts
libs/examples/src/link/: link-examples.module.ts
libs/examples/src/loading-distractor/: loading-distractor-examples.module.ts
libs/examples/src/menu/: menu-examples.module.ts
libs/examples/src/micro-chart/: micro-chart-examples.module.ts
libs/examples/src/overlay/: overlay-examples.module.ts
libs/examples/src/pagination/: pagination-examples.module.ts
libs/examples/src/progress-bar/: progress-bar-examples.module.ts
libs/examples/src/progress-circle/: progress-circle-examples.module.ts
libs/examples/src/quick-filter/: quick-filter-examples.module.ts
libs/examples/src/radial-chart/: radial-chart-examples.module.ts
libs/examples/src/radio/: radio-examples.module.ts
libs/examples/src/secondary-nav/: secondary-nav-examples.module.ts
libs/examples/src/select/: select-examples.module.ts
libs/examples/src/show-more/: show-more-examples.module.ts
libs/examples/src/sidenav/: sidenav-examples.module.ts
libs/examples/src/slider/: slider-examples.module.ts
libs/examples/src/stacked-series-chart/: stacked-series-chart-examples.module.ts
libs/examples/src/stepper/: stepper-examples.module.ts
libs/examples/src/sunburst-chart/: sunburst-chart-examples.module.ts
libs/examples/src/switch/: switch-examples.module.ts
libs/examples/src/table/: table-examples.module.ts
libs/examples/src/table/table-selectable-column-example/: table-selectable-column-example.component.html  table-selectable-column-example.component.ts
libs/examples/src/table/table-selection-example/: table-selection-example.html  table-selection-example.ts
libs/examples/src/tabs/: tabs-examples.module.ts
libs/examples/src/tag/: tag-examples.module.ts
libs/examples/src/tile/: tile-examples.module.ts
libs/examples/src/timeline-chart/: timeline-chart-examples.module.ts
libs/examples/src/toast/: toast-examples.module.ts
libs/examples/src/toggle-button-group/: toggle-button-group-examples.module.ts
libs/examples/src/top-bar-navigation/: top-bar-navigation-examples.module.ts
libs/examples/src/tree-table/: tree-table-examples.module.ts
libs/shared/design-tokens/: BUILD.bazel
libs/tools/examples-tools/: BUILD.bazel
libs/workspace/: BUILD.bazel  webpack.config.js
tools/bazel_rules/: BUILD.bazel  index.bzl  utils.js
tools/bazel_rules/dev_server/: BUILD.bazel  dev_server_macro.bzl  devserver-config.js  es-dev-server.config.js
tools/bazel_rules/html_insert_asset/: BUILD.bazel  html-insert-asset.spec.ts  html-insert-asset.ts  jest.config.json
tools/bazel_rules/jest/: BUILD.bazel  jest-resolver.js  jest-runner.js  jest_macro.bzl  tsconfig.default.json
tools/bazel_rules/ng_application/: BUILD.bazel  build.ts  ng-application.ts  ng_application_macro.bzl  rollup.config.js
tools/bazel_rules/ng_application/utils/: html-insert-asset.spec.ts  html-insert-asset.ts
(+91 files in other folders)
