load("@npm_bazel_typescript//:index.bzl", "ts_library")

package(default_visibility = ["//:__subpackages__"])

ts_library(
    name = "environments",
    srcs = glob(["**/*.ts"]),
    module_name = "@environments",
    deps = [
        "@npm//tslib",
        "@npm//dotenv",
        "@npm//@types/node",
    ],
)
