load("@npm//@bazel/typescript:index.bzl", "ts_config")
load("//tools/bazel_rules:index.bzl", "stylelint")

package(default_visibility = ["//apps/components-e2e:__subpackages__"])

exports_files(["rollup.config.js"])

alias(
    name = "components-e2e",
    actual = "//apps/components-e2e/src:prodapp",
)

# should be run with `ibazel run //apps/components-e2e:serve`
alias(
    name = "serve",
    actual = "//apps/components-e2e/src:devserver",
)

ts_config(
    name = "tsconfig-app",
    src = ":tsconfig.app.json",
    deps = [
        ":tsconfig.json",
        "//:tsconfig.json",
    ],
)

stylelint(
    name = "stylelint",
    srcs = glob(["**/*.scss"]) + [":.stylelintrc"],
)
