load("@npm//@bazel/typescript:index.bzl", "ts_config")
load("//tools/bazel_rules:index.bzl", "ng_module")

package(default_visibility = ["//apps/design-tokens-ui:__subpackages__"])

ng_module(
    name = "design-tokens-ui",
    srcs = [
        "src/main.ts",
    ],
    tsconfig = ":tsconfig-app",
    deps = [
        "@npm//@angular/core",
        "@npm//@angular/platform-browser-dynamic",
    ],
)

ts_config(
    name = "tsconfig-app",
    src = ":tsconfig.app.json",
    deps = [
        ":tsconfig.json",
        "//:tsconfig.json",
    ],
)
