load("//tools/bazel_rules:index.bzl", "ng_module", "rollup")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm//@bazel/typescript:index.bzl", "ts_devserver")

package(default_visibility = ["//apps/components-e2e:__subpackages__"])

sass_binary(
    name = "styles",
    src = "main.scss",
    include_paths = ["external/npm/node_modules"],
    output_name = "styles.css",
    deps = ["//libs/barista-components/style"],
)

ng_module(
    name = "src",
    srcs = [
        "main.dev.ts",
        "main.prod.ts",
    ],
    tsconfig = "//apps/components-e2e:tsconfig-app",
    deps = [
        "//apps/components-e2e/src/app",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
    ],
)

ts_devserver(
    name = "devserver",
    additional_root_paths = [
        "npm/node_modules",
        "npm/node_modules/@dynatrace/barista-fonts",
    ],
    entry_module = "dynatrace/apps/components-e2e/src/main.dev",
    port = 4200,
    scripts = [
        "@npm//:node_modules/tslib/tslib.js",
        "//tools/bazel_rules/dev_server:rxjs_umd_modules",
    ],
    serving_path = "/bundle.js",
    static_files = [
        ":index.html",
        ":styles.css",
        "@npm//:node_modules/zone.js/dist/zone.min.js",
    ],
    deps = [
        ":src",
        "@npm//@dynatrace/barista-fonts",
        "@npm//@dynatrace/barista-icons",
    ],
)

# rollup(
#     name = "bundle-es2015",
#     assets = [],
#     entry_point = {
#         "main.prod.ts": "bundle-es2015.js"
#     },
#     deps = [":src"],
# )

# load("//packages/rollup:index.bzl", "rollup_bundle")
load("@npm//@bazel/rollup:index.bzl", "rollup_bundle")

rollup_bundle(
    name = "bundle-es2015",
    srcs = [":src"],
    output_dir = True,
    entry_points = {
        "main.prod.mjs": "bundle-es2015"
    },
    config_file = "//apps/components-e2e:rollup.config.js",
)

    # "//apps/components-e2e/src/components/icon",
    # "//apps/components-e2e/src/components/button",
    # "//apps/components-e2e/src/components/button-group",
# rollup_bundle(
#     name = "bundle-es2015",
#     config_file = "rollup.config.js",
#     entry_points = {
#         ":main.prod.ts": "index",
#     },
#     output_dir = True,
#     tags = ["prod-showcase"],
#     deps = [
#         "//src/showcase",
#         "@npm//@rollup/plugin-alias",
#         "@npm//rollup-plugin-commonjs",
#         "@npm//rollup-plugin-node-resolve",
#     ],
# )
