load("//tools/bazel_rules:index.bzl", "ng_module")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm//@bazel/typescript:index.bzl", "ts_devserver")
load("@npm//@babel/cli:index.bzl", "babel")
load("@npm//html-insert-assets:index.bzl", "html_insert_assets")
load("@npm//@bazel/rollup:index.bzl", "rollup_bundle")
load("@npm//@bazel/terser:index.bzl", "terser_minified")
load("@npm//history-server:index.bzl", "history_server")
load("//tools/bazel_rules/ng_application:ng_application_macro.bzl", "ng_application_macro")

package(default_visibility = ["//apps/components-e2e:__subpackages__"])

# Root paths that are used to serve files from for the pkg_web and the
# ts_devserver files from this roots can be requested via /...
_rootPaths = [
    "npm/node_modules",
    # "npm/node_modules/@dynatrace",
    "npm/node_modules/@dynatrace/barista-fonts",
]

sass_binary(
    name = "styles",
    src = "main.scss",
    include_paths = ["external/npm/node_modules"],
    output_name = "styles.css",
    deps = ["//libs/barista-components/style"],
)

ng_module(
    name = "src",
    srcs = [
        "main.dev.ts",
        "main.prod.ts",
    ],
    tsconfig = "//apps/components-e2e:tsconfig-app",
    deps = [
        "//apps/components-e2e/src/app",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
    ],
)

ts_devserver(
    name = "devserver",
    additional_root_paths = _rootPaths,
    entry_module = "dynatrace/apps/components-e2e/src/main.dev",
    port = 4200,
    scripts = [
        "@npm//:node_modules/tslib/tslib.js",
        "//tools/bazel_rules/dev_server:rxjs_umd_modules",
    ],
    serving_path = "/bundle.js",
    static_files = [
        ":index.html",
        ":styles.css",
        "@npm//:node_modules/zone.js/dist/zone.min.js",
    ],
    deps = [
        ":src",
        "@npm//@dynatrace/barista-fonts",
        "@npm//@dynatrace/barista-icons",
    ],
)

ng_application_macro(
    name = "prodapp",
    assets = [
        ":styles.css",
        "@npm//@dynatrace/barista-fonts",
        "@npm//@dynatrace/barista-icons",
        "@npm//:node_modules/zone.js/dist/zone.min.js",
    ],
    entry_point = "main.prod.ts",
    index_html = ":index.html",
    root_paths = _rootPaths + [
        "apps/components-e2e/src/prodapp_bundle"
    ],
    deps = [":src"],
)

history_server(
    name = "prodserver",
    data = [":prodapp"],
    templated_args = [
        "-a",
        "$(rootpath :prodapp)",
    ],
)
