load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_library")
load("//tools/bazel_rules:index.bzl", "jest", )

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "html_insert_asset",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    deps = [
        "@npm//@types/node",
        "@npm//cheerio",
        "@npm//prettier",
    ],
)

jest(
    name = "test",
    srcs = glob(include = ["**/*.spec.ts"]),
    jest_config = ":jest.config.json",
    deps = [
        ":html_insert_asset",
    ],
)
