package(default_visibility = ["//:__subpackages__"])
load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_library")
load("//tools/bazel_rules:index.bzl", "jest", )


exports_files(["rollup.config.js", "rollup-index-file-plugin.js"])


ts_library(
    name = "ng_application",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    deps = [
        "@npm//tslib",
        "@npm//@types/node",
        "@npm//cheerio",
        "@npm//prettier",
        "@npm//yargs",
        '@npm//@rollup/plugin-node-resolve',
        '@npm//@rollup/plugin-commonjs',
        '@npm//rollup',
    ],
)

jest(
    name = "test",
    srcs = glob(include = ["**/*.spec.ts"]),
    jest_config = ":jest.config.json",
    deps = [
        ":ng_application",
    ],
)
